--- a/FlowerViewer/App.xaml
+++ b/FlowerViewer/App.xaml
@@ -1,6 +1,8 @@
 ﻿<Application x:Class="FlowerViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:Grabacr07.Desktop.Metro.Converters;assembly=Desktop.Metro"
+             xmlns:properties="clr-namespace:FlowerViewer.Properties">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,6 +16,11 @@
                 <ResourceDictionary Source="pack://application:,,,/FlowerViewer;component/Styles/Controls.HorizontalFlatListBox.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/FlowerViewer;component/Styles/Controls.Text.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <converters:UniversalBooleanToVisibilityConverter x:Key="UniversalBooleanToVisibilityConverter" />
+            <converters:StringToVisiblityConverter x:Key="StringToVisiblityConverter" />
+            <converters:EnumToBooleanConverter x:Key="EnumToBooleanConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
