--- a/FlowerViewer/Views/Contents/Tools.xaml
+++ b/FlowerViewer/Views/Contents/Tools.xaml
@@ -11,7 +11,16 @@
              d:DesignWidth="650"
              d:DesignHeight="400"
              d:DataContext="{d:DesignInstance vmContents:ToolsViewModel}">
-    <CheckBox Margin="8,6"
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <CheckBox Margin="8,6"
               Content="{Binding Resources.Tools_Auto_Battle, Source={x:Static models:ResourceService.Current}, Mode=OneWay}"
               IsChecked="{Binding Source={x:Static models:Settings.Current}, Path=IsAutoBattle, Mode=TwoWay}" />
+
+    </Grid>
 </UserControl>
