--- a/FlowerViewer/Views/Settings/Network.xaml
+++ b/FlowerViewer/Views/Settings/Network.xaml
@@ -30,7 +30,7 @@
 
         <CheckBox x:Name="CheckBoxUseProxy"
 				  Content="{Binding Resources.Settings_Proxy_Enable, Source={x:Static models:ResourceService.Current}, Mode=OneWay}"
-				  IsChecked="{Binding Source={x:Static models:Settings.Current}, Path=ProxySettings.IsEnabled}" />
+				  IsChecked="{Binding Source={x:Static models:Settings.Current}, Path=ProxySettings.IsEnable}" />
         <StackPanel IsEnabled="{Binding IsChecked, ElementName=CheckBoxUseProxy}"
 					Margin="20,6,0,6">
             <Grid Margin="0,4">
